Исправил Картинку Gory

--- a/profile/css/style.css
+++ b/profile/css/style.css
@@ -101,7 +101,7 @@ body {
 
 		#one .gori {
 			position: absolute;
-			background: url(../img/gori.png) no-repeat;
+			background: url(../img/Gori.png) no-repeat;
 			height: 100%;
 			width: 100%;
 			z-index: 0;
